[project]
name = "fastapi_rlr"
version = "0.1.1"
description = "FastAPI middleware for IP-based rate limiting using Redis, with configurable request limits and time windows."
readme = "README.md"
authors = [
    { name = "Darix SAMANI SIEWE", email = "samanidarix@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "redis",
    "starlette",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_rate_limiter"]
